[package]
name = "dist-client"
version = "0.1.0"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.2"
log = "0.4.14"
stderrlog = "0.5.1"
