[package]
name = "dist-server"
version = "0.1.0"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
dist-package-db = { version = "0.1.0", path = "../dist-package-db" }
imdl-wrapper = { version = "0.1.0", path = "../imdl-wrapper" }
