[package]
name = "dist-server"
version = "0.1.0"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.2"
dist-package = { version = "0.1.0", path = "../dist-package" }
dist-package-db = { version = "0.1.0", path = "../dist-package-db" }
dist-utils = { version = "0.1.0", path = "../dist-utils" }
imdl-wrapper = { version = "0.1.0", path = "../imdl-wrapper" }
log = "0.4.14"
stderrlog = "0.5.1"
sysinfo = "0.17.1"
transmission-wrapper = { version = "0.1.0", path = "../transmission-wrapper" }
