[package]
name = "imdl-wrapper"
version = "0.1.0"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-escape = "0.1.5"
tempfile = "3.2.0"
