[package]
name = "transmission-wrapper"
version = "0.1.0"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dist-utils = { version = "0.1.0", path = "../dist-utils" }
getset = "0.1.1"
sysinfo = "0.17.1"
thiserror = "1.0.24"
